--- a/globals.css
+++ b/globals.css
@@ -1,1 +1,7 @@
+$content = @'
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+'@
 
+$content | Out-File -FilePath "globals.css" -Encoding utf8
